--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"webpack-dev-server": "^3.11.0"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.15.1",
 		"bootstrap": "^4.5.3",
 		"clean-webpack-plugin": "^3.0.0",
 		"html-webpack-plugin": "^4.5.0",
